2009-10-15  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequestChannel.cs (WaitEnd): Neither Moonlight nor MonoTouch
	support contexts so we call the non-overloaded WaitOne method 
	(which defaults to false).

2009-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs, AspNetReplyChannel.cs, HttpChannelListener.cs:
	  significant rewrite to cooperate wcf handler and asp.net handler
	  to not mix multiple WCF listener within the asp.net handler.
	  So far it mostly works when 1) there are no ChannelDispatchers
	  that have an identical listen Uri and 2) MaxConcurrentSessions is
	  1 (must be explicitly set).

2009-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* CommunicationObject.cs : give better state error description.

2009-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CommunicationObject.cs : OnOpening() and OnOpened() require calls
	  to base methods. This resulted in not a few changes everywhere.

2009-10-07  Atsushi Enomoto  <atsushi@ximian.com>

	* IHttpCookieContainer.cs : new 2.1-only interface (no use).

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : use file path given by the factory to
	  construct BaseAddresses. Requests to "test.svc/jsdebug" should
	  not be handled as request to "jsdebug" file, it's rather an
	  "argument" to "test.svc".

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs, HttpChannelListener.cs : some significant
	  rewrite to handle shutdown situation better. The listeners should
	  not close channels that it opened. Instead, just stop accepting
	  further requests. Removed blocking mutex on WaitForRequest().
	  Now xsp shuts down as expected.

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs : lock list when releasing its content contexts.
	* AspNetReplyChannel.cs : send EndRequest() to handler when it is
	  closing.

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandlerFactory.cs : remove todo.